--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
         </activity>
         <activity
-            android:name=".ui.main.NavigationActivity"
+            android:name=".ui.navigation.NavigationActivity"
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme">
             <intent-filter>
