--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,24 +7,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.MainActivity"></activity>
-        <activity
-            android:name=".ui.navigation.NavigationActivity"
-            android:label="@string/title_activity_navigation"
-            android:theme="@style/AppTheme">
+        <activity android:name=".ui.main.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.bottomnavigation.BottomnavigtionActivity"
-            android:label="@string/title_activity_bottomnavigtion"
-            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
