--- a/CaiXiaoShuangLibrary/build.gradle
+++ b/CaiXiaoShuangLibrary/build.gradle
@@ -42,6 +42,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.android.support:design:25.3.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
-
+    compile files('libs/core-3.0.0.jar')
 }
