--- a/CaiXiaoShuangLibrary/src/main/AndroidManifest.xml
+++ b/CaiXiaoShuangLibrary/src/main/AndroidManifest.xml
@@ -24,13 +24,20 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <!-- 添加操作闪光灯的权限 -->
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <!-- 添加操作震动器的权限 -->
     <uses-permission android:name="android.permission.VIBRATE" />
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity
+            android:name="com.intelligence.androidlibrary.zxing.android.CaptureActivity"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
+
+
 
 </manifest>
